# CompressedStacks.cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  data.hpp  exampleyago.h  problem.cpp  problem.hpp  sign.cpp  sign.hpp  stack.hpp
docs/html/: _point2_d_8hpp_source.html  annotated.html  annotated_dup.js  buffer_8hpp_source.html  class_buffer-members.html  class_buffer.html  class_buffer.js  class_buffer__coll__graph.map  class_buffer__coll__graph.md5  class_compare_stacks-members.html  class_compare_stacks.html  class_compare_stacks.js  class_compare_stacks__coll__graph.map  class_compare_stacks__coll__graph.md5  class_compare_stacks__inherit__graph.map  class_compare_stacks__inherit__graph.md5  class_comparison-members.html  class_comparison.html  class_comparison.js  class_comparison__inherit__graph.map  class_comparison__inherit__graph.md5  class_component-members.html  class_component.html  class_component.js  class_component__coll__graph.map  class_component__coll__graph.md5  class_compressed_stack-members.html  class_compressed_stack.html  class_compressed_stack.js  class_compressed_stack__coll__graph.map  class_compressed_stack__inherit__graph.md5  class_data-members.html  class_data.html  class_data.js  class_data__coll__graph.map  class_data__coll__graph.md5  class_instance-members.html  class_instance.html  class_instance.js  class_instance__coll__graph.map  (+105 more)
docs/html/search/: all_1.js  all_3.js  all_6.js  classes_1.js  classes_5.js  classes_7.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  class_buffer.tex  class_compare_stacks.tex  class_compare_stacks__coll__graph.md5  class_compare_stacks__inherit__graph.md5  class_comparison.tex  class_comparison__coll__graph.md5  class_component.tex  class_compressed_stack.tex  class_compressed_stack__coll__graph.md5  class_data.tex  class_instance.tex  class_instance__coll__graph.md5  class_normal_stack.tex  class_normal_stack__coll__graph.md5  class_point2_d.tex  class_point2_d__coll__graph.md5  class_problem.tex  class_problem__inherit__graph.md5  class_signature.tex  class_signature__coll__graph.md5  class_stack.tex  class_stack__inherit__graph.md5  classcomparison_convex_hull.tex  classcomparison_convex_hull__inherit__graph.md5  classconvex_hull.tex  classconvex_hull__inherit__graph.md5  classcreate_test_input.tex  classcreate_test_input__coll__graph.md5  classempty_context.tex  classempty_context__coll__graph.md5  dir_043f3b0fb1aa77d1248635ad82081ab4.tex  dir_21d13361ca82c3a58ac26f9b5104334f.tex  dir_2fdfafdd8c909ecf9d8c699142c0c76a.tex  dir_33787c5dd730a9729bd36f5115b2f2da.tex  dir_3bedfee75e8923a1073e69d8aa27a207.tex  dir_4092077234d3ce0ad714906d35127325.tex  dir_547765fa73b14a6727428ac240ad0cd0.tex  dir_76683a1085fd00e238061aa3fb870e91.tex  dir_84d4ec99856759213102e4209c09c524.tex  (+16 more)
examples/convexhull/: convexHull.cpp  convexHull16.cpp  convexHull32.cpp  convexHull64.cpp  convexHull8.cpp  convexHullExtras.cpp  generateInputConvexHull.cpp
examples/convexhull/include/: convexHull.hpp  convexHullExtras.hpp  point2D.hpp
examples/convexhull/instances/: testFileConvexHull1000p50.txt
examples/testrun/: generateInputTestRun.cpp  testrun.cpp  testrun16.cpp  testrun32.cpp  testrun64.cpp  testrun8.cpp  testrunExtras.cpp
examples/testrun/include/: testrun.hpp  testrunExtras.hpp
examples/testrun/instances/: testFileChristmasTreeCycle8Step8Pop4n1000p50.txt  testFilePushProbablility10p50n1000.txt
examples/upperhull/: generateInputUpperHull.cpp  upperHull16.cpp  upperHull32.cpp  upperHull64.cpp  upperHull8.cpp  upperHullExtras.cpp
examples/upperhull/include/: point2D.hpp  upperHull.hpp  upperHullExtras.hpp
extras/: adaptiveUInt.hpp  classicStack.hpp  stackAlgoExtras.hpp
include/: Point2D.hpp  block.hpp  buffer.hpp  classicStack.hpp  compare.hpp  component.hpp  compressedStack.hpp  convexHull.hpp  createTestInput.hpp  data.hpp  normalStack.hpp  problem.hpp  sign.hpp  stack.hpp  stackAlgo.hpp
instances/: CTInput.csv  pushOnlyInput.csv  smallsize.csv
sources/: CMakeLists.txt  Point2D.cpp  Point2D.h  compressedStack.cpp  compressedStack.hpp  createTestInput.cpp  data.cpp  main.cpp  normalStack.cpp  normalStack.hpp  sign.hpp
src/: Point2D.cpp  convexHull.cpp  createTestInput.cpp  main.cpp  point2D.cpp  problem.cpp  sign.cpp
